system/gatekeeper/templates/constraint-images-from-dockerhub.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: gkimagesfromdockerhub
spec:
  crd:
    spec:
      names:
        kind: GkImagesFromDockerhub
      validation:
        openAPIV3Schema:
          properties: {}

  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package imagesfromdockerhub

        violation[{"msg": msg, "details": {"container": container_name, "image": image}}] {
          input.review.object.kind == "Pod"
          container := input.review.object.spec.containers[_]
          container_name := container.name
          image := container.image

          # Docker Hub images have no dot in the first path element (e.g. "foo/bar:latest" vs. "quay.io/foo/bar:latest")
          regex.match("^[^/.]*/", image)

          # we allow some very basic components (kube-network-helpers, kube-proxy, kube-system-nginx-ingress-*, sysctl) to pull from Docker Hub to avoid circular dependencies
          not regex.match("^sapcc/(?:defaultbackend|ip-masq-agent-amd64|k8s-conntrack-nanny|kube-externalip|kube-parrot|kube-proxy-amd64|nginx-ingress-controller|sysctl):", image)

          # we also don't bother with reporting Tiller, since it's going out soon anyway (TODO: remove this special case once all Helm 2 stuff is gone)
          not regex.match("^sapcc/tiller:", image)

          msg := sprintf("container %q uses an image from Docker Hub: %s", [container_name, image])
        }
